[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tardis-dl"
description = 'Simple tool to dl daily files from tardis'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "raddy", email = "notraddy@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pandas", "typer[all]", "python-decouple", "jsonlines", "tardis_client", "tardis_dev"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/tardis-dl#readme"
Issues = "https://github.com/unknown/tardis-dl/issues"
Source = "https://github.com/unknown/tardis-dl"

[tool.hatch.version]
path = "tardis_dl/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=tardis_dl --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "tardis_dl/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
